# serde_builder

./: Cargo.toml  README.md
examples/: simple_case.rs  simple_de.rs  simple_ser.rs
src/: field_visitor.rs  lib.rs
src/de/: error.rs  field_visitor.rs  final_builder.rs  mod.rs  validator.rs
src/ser/: mod.rs
