[package]
name = "serde_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
leaking = []

[dependencies]
serde = "1.0"
concat-arrays = "0.1"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
