[package]
name = "serde_builder"
version = "0.2.0"
edition = "2021"
description = "serde extension to build de/serialization algorithms for types using a builder pattern"
license = "MIT"
repository = "https://github.com/JohnTheCoolingFan/serde_builder"
documentation = "https://docs.rs/serde_builder"
authors = ["Jonh The Cooling Fan <ivan8215145640@gmail.com>"]
categories = ["encoding", "rust-patterns"]

[features]
leaking = []

[dependencies]
serde = "1.0"
concat-arrays = "0.1"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
